--- a/SimTECH/SimTECH/Pages/Factors/IncidentEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/IncidentEditor.razor
@@ -14,7 +14,7 @@
                     @if (Model.Id == 0)
                     {
                         <MudChipSet @bind-SelectedChip="categoryChip" Mandatory="true">
-                            @foreach (var cat in EnumHelper.GetIncidentCategories())
+                            @foreach (var cat in EnumHelper.GetIncidentCategories)
                             {
                                 <MudChip Value="@cat.Key">@cat.Value</MudChip>
                             }
