--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -113,7 +113,7 @@
     {
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
-            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Home", href: "/", disabled: true),
         });
 
         // following is possibly a very unoptimized call
