--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -45,7 +45,7 @@
                 @if (context.Item.DevelopmentRanges != null)
                 {
                     <MudText Typo="Typo.h6">Development ranges</MudText>
-                    <MudStack Spacing="2" Row="true" Justify="Justify.SpaceBetween">
+                    <MudStack Spacing="2" Row="true" Justify="Justify.SpaceBetween" Class="flex-wrap ">
                         @foreach (var rangeGroup in context.Item.DevelopmentRanges.GroupBy(e => e.Type))
                         {
                             <MudStack>
