--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDriverEditor.razor
@@ -25,7 +25,7 @@
                 <MudNumericField @bind-Value="@Model.Defense" Label="Defense" Class="field-sm" />
 
                 <MudSelect T="TeamRole" @bind-Value="@Model.TeamRole" Label="Team Role">
-                    @foreach (var select in EnumHelper.GetTeamRoleSelection())
+                    @foreach (var select in EnumHelper.GetTeamRoleSelection)
                     {
                         <MudSelectItem Value="select.Key">@select.Value</MudSelectItem>
                     }
