--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -118,7 +118,7 @@
                         </MudTabPanel>
                     </MudTabs>
                 </MudTabPanel>
-                @if (Season.State == State.Active)
+                @if (Season.State != State.Closed)
                 {
                     <MudTabPanel Text="Development">
                         <DevelopmentEntrants />
