--- a/SimTECH/SimTECH/Pages/Setup/TrackEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TrackEditor.razor
@@ -21,11 +21,11 @@
 
                             <MudText Typo="Typo.subtitle1" Class="mt-4">Modifiers</MudText>
                             <MudDivider />
-                            <MudNumericField T="double" @bind-Value="Model.AeroMod" Label="Aero mod" Format="N2" Class="field-sm" />
-                            <MudNumericField T="double" @bind-Value="Model.ChassisMod" Label="Chassis mod" Format="N2" Class="field-sm" />
-                            <MudNumericField T="double" @bind-Value="Model.PowerMod" Label="Power mod" Format="N2" Class="field-sm" />
-                            <MudNumericField T="double" @bind-Value="Model.QualifyingMod" Label="Qualy mod" Format="N2" Class="field-sm" />
-                            <MudNumericField T="double" @bind-Value="Model.DefenseMod" Label="Defense mod" Format="N2" Class="field-sm" />
+                            <MudNumericField T="double" @bind-Value="Model.AeroMod" Step="0.1" Label="Aero mod" Format="N2" Class="field-sm" />
+                            <MudNumericField T="double" @bind-Value="Model.ChassisMod" Step="0.1" Label="Chassis mod" Format="N2" Class="field-sm" />
+                            <MudNumericField T="double" @bind-Value="Model.PowerMod" Step="0.1" Label="Power mod" Format="N2" Class="field-sm" />
+                            <MudNumericField T="double" @bind-Value="Model.QualifyingMod" Step="0.1" Label="Qualy mod" Format="N2" Class="field-sm" />
+                            <MudNumericField T="double" @bind-Value="Model.DefenseMod" Step="0.1" Label="Defense mod" Format="N2" Class="field-sm" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
