--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -14,7 +14,7 @@
                             @if (Model.Id == 0)
                             {
                                 <MudChipSet @bind-SelectedChip="entrantChip">
-                                    @foreach (var entrant in EnumHelper.GetEntrantSelection())
+                                    @foreach (var entrant in EnumHelper.GetEntrantSelection)
                                     {
                                         <MudChip Value="@entrant.Key">@entrant.Value</MudChip>
                                     }
