--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
@@ -38,7 +38,7 @@
                     </MudTd>
                     <MudTd DataLabel="TeamRole">
                         <MudSelect T="TeamRole" @bind-Value="@context.TeamRole">
-                            @foreach (var select in EnumHelper.GetTeamRoleSelection())
+                            @foreach (var select in EnumHelper.GetTeamRoleSelection)
                             {
                                 <MudSelectItem Value="select.Key">@select.Value</MudSelectItem>
                             }
