--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -13,17 +13,13 @@
             <MudItem xs=12>
                 <MudPaper Elevation="15" Height="200px" Class="pa-4">
                     <MudStack Row="true" AlignItems="AlignItems.Center">
-                        <MudText>Todo:</MudText>
-                        <MudList Color="Color.Warning">
-                            <MudListItem>Design in general</MudListItem>
-                            <MudListItem>Podium with graphic</MudListItem>
-                        </MudList>
+                        <MudText>E</MudText>
 
                         <MudSpacer />
 
                         <MudStack>
                             <MudText Typo="Typo.h3">Post race</MudText>
-                            <MudText Color="Color.Warning">This page is quite unfinished, <br />you can go to the standings though with a following button</MudText>
+                            <MudText Color="Color.Warning">This page is quite unfinished</MudText>
                         </MudStack>
 
                         <MudSpacer />
