--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -27,10 +27,10 @@
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="No." HeaderClass="number-col hide-sort-icons" CellClass="number-col" CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" />
-            <PropertyColumn Property="e => e!.Skill" />
-            <PropertyColumn Property="e => e!.Reliability" Title="Rel." />
-            <PropertyColumn Property="e => e!.Attack" Title="Attack" />
-            <PropertyColumn Property="e => e!.Defense" Title="Defense" />
+            <PropertyColumn Property="e => e!.Skill" CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.Reliability" Title="Rel." CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.Attack" Title="Attack" CellClass="font-caption" />
+            <PropertyColumn Property="e => e!.Defense" Title="Defense" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.TeamRole" Title="Role" />
             <TemplateColumn T="SeasonDriver" Title="Team" SortBy="e => e.SeasonTeam?.Name">
                 <CellTemplate>
